Fixed gap between content and footer on short screens by adding padding to content

--- a/css/general.css
+++ b/css/general.css
@@ -72,8 +72,8 @@ h1,h2,h3,h4,h5,h6 {
 	margin: 0 auto;
 	width: 83ch;
 	background: #00000044;
-	min-height: calc(100vh - 14em);
-	padding: 1.5em 1ch 0 1ch;
+	min-height: calc(100vh - 13em);
+	padding: 1.5em 1ch 2em 1ch;
 	backdrop-filter: blur(2px);
 }
 
